[project]
name = "china-nulls-next"
version = "68.0-beta"
description = "Chinese skins are now in Null's Brawl!"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "rich>=15.0.0",
]

[dependency-groups]
dev = [
    "mypy>=2.3.0",
    "ruff>=0.15.21",
]
